--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -25,6 +25,16 @@
   border-radius: 40px;
   margin-left: 30px;
 }
+.page {  
+  display:flex;
+  align-items: center;
+  justify-content: center;;
+  width: 25px;
+  height: 25px;
+  background-color: greenyellow;
+  border-radius: 40px;
+  margin-left: 30px;
+}
 
 p {
   color: black;
