--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -18,7 +18,8 @@
 .main {  
   display:flex;
   align-items: center;
-  justify-content: center;;
+  justify-content: center;
+  flex-direction: column;
   width: 250px;
   height: 250px;
   background-color: aqua;
