--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -43,11 +43,12 @@ p {
   font-size: large;
 }
 
-.done{
+
+.done {
   font-family: Consolas;
   font-size: 1.5em;
-  color: rebeccapurple;
+  color: rgb(4, 194, 118);
 }
-.selected{
-  color: #54916c;
+p.hidden {
+  display: none;
 }
